# cgminer-usb-BM1387-BM1397

./: .gitignore  CMakeLists.txt  driver-gekko.c  usbutils.c
compat/libusb-1.0/: libusb-1.0.pc
