cmake_minimum_required(VERSION 3.17)
project(cgminer_gekko C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(ccan/compiler)
include_directories(ccan/opt)
include_directories(ccan/opt/test)
include_directories(ccan/typesafe_cb)
include_directories(compat/jansson-2.9/android)
include_directories(compat/jansson-2.9/src)
include_directories(compat/jansson-2.9/test/suites/api)
include_directories(compat/libusb-1.0/libusb)
include_directories(compat/libusb-1.0/libusb/os)
include_directories(lib)

add_executable(cgminer_gekko
        ccan/compiler/test/compile_fail-printf.c
        ccan/compiler/test/run-is_compile_constant.c
        ccan/compiler/compiler.h
        ccan/opt/test/compile_ok-const-arg.c
        ccan/opt/test/run-checkopt.c
        ccan/opt/test/run-correct-reporting.c
        ccan/opt/test/run-helpers.c
        ccan/opt/test/run-iter.c
        ccan/opt/test/run-no-options.c
        ccan/opt/test/run-usage.c
        ccan/opt/test/run.c
        ccan/opt/test/utils.c
        ccan/opt/test/utils.h
        ccan/opt/helpers.c
        ccan/opt/opt.c
        ccan/opt/opt.h
        ccan/opt/parse.c
        ccan/opt/private.h
        ccan/opt/usage.c
        ccan/typesafe_cb/test/compile_fail-cast_if_type-promotable.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb-int.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb_cast-multi.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb_cast.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb_postargs.c
        ccan/typesafe_cb/test/compile_fail-typesafe_cb_preargs.c
        ccan/typesafe_cb/test/compile_ok-typesafe_cb-NULL.c
        ccan/typesafe_cb/test/compile_ok-typesafe_cb-undefined.c
        ccan/typesafe_cb/test/compile_ok-typesafe_cb-vars.c
        ccan/typesafe_cb/test/compile_ok-typesafe_cb_cast.c
        ccan/typesafe_cb/test/run.c
        ccan/typesafe_cb/typesafe_cb.h
        compat/jansson-2.9/android/jansson_config.h
        compat/jansson-2.9/doc/github_commits.c
        compat/jansson-2.9/examples/simple_parse.c
        compat/jansson-2.9/src/dump.c
        compat/jansson-2.9/src/error.c
        compat/jansson-2.9/src/hashtable.c
        compat/jansson-2.9/src/hashtable.h
        compat/jansson-2.9/src/hashtable_seed.c
        compat/jansson-2.9/src/jansson.h
        compat/jansson-2.9/src/jansson_private.h
        compat/jansson-2.9/src/load.c
        compat/jansson-2.9/src/lookup3.h
        compat/jansson-2.9/src/memory.c
        compat/jansson-2.9/src/pack_unpack.c
        compat/jansson-2.9/src/strbuffer.c
        compat/jansson-2.9/src/strbuffer.h
        compat/jansson-2.9/src/strconv.c
        compat/jansson-2.9/src/utf.c
        compat/jansson-2.9/src/utf.h
        compat/jansson-2.9/src/value.c
        compat/jansson-2.9/test/bin/json_process.c
        compat/jansson-2.9/test/suites/api/test_array.c
        compat/jansson-2.9/test/suites/api/test_copy.c
        compat/jansson-2.9/test/suites/api/test_dump.c
        compat/jansson-2.9/test/suites/api/test_dump_callback.c
        compat/jansson-2.9/test/suites/api/test_equal.c
        compat/jansson-2.9/test/suites/api/test_load.c
        compat/jansson-2.9/test/suites/api/test_load_callback.c
        compat/jansson-2.9/test/suites/api/test_loadb.c
        compat/jansson-2.9/test/suites/api/test_memory_funcs.c
        compat/jansson-2.9/test/suites/api/test_number.c
        compat/jansson-2.9/test/suites/api/test_object.c
        compat/jansson-2.9/test/suites/api/test_pack.c
        compat/jansson-2.9/test/suites/api/test_simple.c
        compat/jansson-2.9/test/suites/api/test_unpack.c
        compat/jansson-2.9/test/suites/api/util.h
        compat/libusb-1.0/libusb/os/darwin_usb.c
        compat/libusb-1.0/libusb/os/darwin_usb.h
        compat/libusb-1.0/libusb/os/linux_netlink.c
        compat/libusb-1.0/libusb/os/linux_udev.c
        compat/libusb-1.0/libusb/os/linux_usbfs.c
        compat/libusb-1.0/libusb/os/linux_usbfs.h
        compat/libusb-1.0/libusb/os/openbsd_usb.c
        compat/libusb-1.0/libusb/os/poll_posix.h
        compat/libusb-1.0/libusb/os/poll_windows.c
        compat/libusb-1.0/libusb/os/poll_windows.h
        compat/libusb-1.0/libusb/os/threads_posix.c
        compat/libusb-1.0/libusb/os/threads_posix.h
        compat/libusb-1.0/libusb/os/threads_windows.c
        compat/libusb-1.0/libusb/os/threads_windows.h
        compat/libusb-1.0/libusb/os/windows_usb.c
        compat/libusb-1.0/libusb/os/windows_usb.h
        compat/libusb-1.0/libusb/core.c
        compat/libusb-1.0/libusb/descriptor.c
        compat/libusb-1.0/libusb/hotplug.c
        compat/libusb-1.0/libusb/hotplug.h
        compat/libusb-1.0/libusb/io.c
        compat/libusb-1.0/libusb/libusb.h
        compat/libusb-1.0/libusb/libusbi.h
        compat/libusb-1.0/libusb/sync.c
        compat/libusb-1.0/libusb/version.h
        lib/dummy.c
        lib/memchr.c
        lib/memmem.c
        lib/sig-handler.h
        lib/sigaction.c
        lib/signal.in.h
        lib/sigprocmask.c
        lib/stddef.in.h
        lib/stdint.in.h
        lib/str-two-way.h
        lib/string.in.h
        A1-board-selector-CCD.c
        A1-board-selector-CCR.c
        A1-board-selector.h
        A1-common.h
        A1-desk-board-selector.c
        A1-trimpot-mcp4x.c
        A1-trimpot-mcp4x.h
        api-example.c
        api.c
        arg-nonnull.h
        bench_block.h
        bitforce-firmware-flash.c
        bitmain-board-test.c
        bitmain-board-test.h
        c++defs.h
        cgminer.c
        compat.h
        crc.h
        crc16.c
        dm_compat.c
        dm_compat.h
        dm_fan_ctrl.c
        dm_fan_ctrl.h
        dm_temp_ctrl.c
        dm_temp_ctrl.h
        dragonmint_t1.c
        dragonmint_t1.h
        driver-bab.c
        driver-bitmain.c
        driver-bitmain.h
        driver-blockerupter.c
        driver-blockerupter.h
        driver-gekko.c
        driver-gekko.h
        driver-hashfast.c
        driver-hashfast.h
        driver-hashratio.c
        driver-hashratio.h
        elist.h
        fpgautils.c
        fpgautils.h
        hexdump.c
        hf_protocol.h
        hf_protocol_be.h
        i2c-context.c
        i2c-context.h
        klist.c
        klist.h
        knc-asic.c
        knc-asic.h
        knc-transport-spi.c
        knc-transport.h
        libbitfury.c
        libbitfury.h
        logging.c
        logging.h
        mcp2210.c
        mcp2210.h
        miner.h
        noncedup.c
        sha2.c
        sha2.h
        spi-context.c
        spi-context.h
        usbutils.c
        usbutils.h
        uthash.h
        util.c
        util.h
        warn-on-use.h)
